# rsb.git.cpp

examples/server/: client.cpp  server.cpp
src/: CMakeLists.txt
src/rsb/: Factory.cpp  Factory.h  Participant.h  ParticipantConfig.cpp  ParticipantConfig.h
src/rsb/introspection/: CMakeLists.txt  IntrospectionSender.cpp  IntrospectionSender.h  Model.h  Plugin.cpp
src/rsb/patterns/: LocalServer.cpp  RemoteServer.cpp
